# rxcpp-combine-latest-segfault

./: Bar.cpp  Bar.hpp  CMakeLists.txt  Foo.cpp  Foo.hpp  main.cpp
